[metadata]
name = imageGenie
version = 0.0.7
author = Ravi Prakash
author_email = ravi.0531.rp@gmail.com
description = State of the Art low-code Deep Learning Package for Image Classification
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ravi0531rp/imageGenie
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find: 
python_requires = >3.7
install_requires =
    opencv-contrib-python==4.5.5.62
    tensorflow-gpu==2.8.0
    Pillow
    scipy


include_package_data = True